# rbac-poc

./: .gitignore  README.md  package-lock.json  pyproject.toml  run_rbac_poc.py
docs/: RBAC.md  openapi.json  rbac_app.md
front-end/: README.md
front-end/src-skeleton/: README.md
front-end/src-skeleton/routes/: +page.svelte
front-end/src-skeleton/routes/permissions/: +page.svelte
front-end/src-skeleton/routes/users/[id]/: +page.svelte
front-end/src-skeleton/routes/users/create/: +page.svelte
front-end/svelte/: README.md
front-end/svelte/gh-profile/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
front-end/svelte/gh-profile/src/components/: Formulario.svelte
front-end/svelte/gh-profile/src/interfaces/: GhRepoResponse.ts  IRepositorio.ts
front-end/svelte/gh-profile/src/utils/: montaUsuario.ts
front-end/svelte/rbac_poc/: .gitignore  package-lock.json  package.json  tsconfig.json
front-end/svelte/rbac_poc/docs/: README.md
front-end/svelte/rbac_poc/src/lib/: api.js  api.ts  logger.ts  models.ts
front-end/svelte/rbac_poc/src/lib/server/: logger.ts
front-end/svelte/rbac_poc/src/routes/: +page.svelte
front-end/svelte/rbac_poc/src/routes/permissions/: +page.svelte
frontend-svelte/: package-lock.json  package.json  treeview.html
frontend-svelte/src/: app.d.ts
frontend-svelte/src/lib/: api.ts  environment.ts
frontend-svelte/src/lib/components/: TopMenuBar.svelte  TreeView.svelte
frontend-svelte/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend-svelte/src/routes/area-restrita/: +page.svelte
frontend-svelte/src/routes/area-restrita/permissions/: +page.svelte
frontend-svelte/src/routes/area-restrita/users/[id]/: +page.svelte
frontend-svelte/src/routes/fornecedores/: +page.svelte
frontend-svelte/src/routes/projetos/: +page.svelte
src/rbac_poc/: __about__.py  database.py  main.py  models.py
(+5 files in other folders)
